white bar on right side gone, overflow issue

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -1,3 +1,11 @@
+html,body{
+    // width: 100%;
+    // height: 100%;
+    // margin: 0px;
+    // padding: 0px;
+    overflow-x: hidden;
+}
+
 #footer {
 	// margin-top: 30px;
 	border-top: 1px solid #eeeeee;
